// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<Fragment>
  <AlmBindingDefinitionFormField
    autoFocus={true}
    help="settings.almintegration.form.name.gitlab.help"
    id="name.gitlab"
    maxLength={200}
    onFieldChange={[MockFunction]}
    propKey="key"
    value=""
  />
  <AlmBindingDefinitionFormField
    help={
      <React.Fragment>
        settings.almintegration.form.url.gitlab.help
        <br />
        <em>
          https://gitlab.com/api/v4
        </em>
        <br />
        <br />
        settings.almintegration.form.url.pat_warning
      </React.Fragment>
    }
    id="url.gitlab"
    maxLength={2000}
    onFieldChange={[MockFunction]}
    propKey="url"
    value=""
  />
  <AlmBindingDefinitionFormField
    help={
      <FormattedMessage
        defaultMessage="settings.almintegration.form.personal_access_token.gitlab.help"
        id="settings.almintegration.form.personal_access_token.gitlab.help"
        values={
          {
            "doc_link": <withAppStateContext(DocLink)
              to="/devops-platform-integration/gitlab-integration/"
            >
              learn_more
            </withAppStateContext(DocLink)>,
            "pat": <ForwardRef(Link)
              target="_blank"
              to="https://docs.gitlab.com/ee/user/profile/personal_access_tokens.html"
            >
              settings.almintegration.form.personal_access_token.gitlab.help.url
            </ForwardRef(Link)>,
            "permission": <strong>
              Reporter
            </strong>,
            "scope": <strong>
              api
            </strong>,
          }
        }
      />
    }
    id="personal_access_token"
    isSecret={true}
    isTextArea={true}
    maxLength={2000}
    onFieldChange={[MockFunction]}
    overwriteOnly={false}
    propKey="personalAccessToken"
    value=""
  />
</Fragment>
`;

exports[`should render correctly 2`] = `
<Fragment>
  <AlmBindingDefinitionFormField
    autoFocus={true}
    help="settings.almintegration.form.name.gitlab.help"
    id="name.gitlab"
    maxLength={200}
    onFieldChange={[MockFunction]}
    propKey="key"
    value="foo"
  />
  <AlmBindingDefinitionFormField
    help={
      <React.Fragment>
        settings.almintegration.form.url.gitlab.help
        <br />
        <em>
          https://gitlab.com/api/v4
        </em>
        <br />
        <br />
        settings.almintegration.form.url.pat_warning
      </React.Fragment>
    }
    id="url.gitlab"
    maxLength={2000}
    onFieldChange={[MockFunction]}
    propKey="url"
    value=""
  />
  <AlmBindingDefinitionFormField
    help={
      <FormattedMessage
        defaultMessage="settings.almintegration.form.personal_access_token.gitlab.help"
        id="settings.almintegration.form.personal_access_token.gitlab.help"
        values={
          {
            "doc_link": <withAppStateContext(DocLink)
              to="/devops-platform-integration/gitlab-integration/"
            >
              learn_more
            </withAppStateContext(DocLink)>,
            "pat": <ForwardRef(Link)
              target="_blank"
              to="https://docs.gitlab.com/ee/user/profile/personal_access_tokens.html"
            >
              settings.almintegration.form.personal_access_token.gitlab.help.url
            </ForwardRef(Link)>,
            "permission": <strong>
              Reporter
            </strong>,
            "scope": <strong>
              api
            </strong>,
          }
        }
      />
    }
    id="personal_access_token"
    isSecret={true}
    isTextArea={true}
    maxLength={2000}
    onFieldChange={[MockFunction]}
    overwriteOnly={true}
    propKey="personalAccessToken"
    value="foobar"
  />
</Fragment>
`;
